--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.2",
     "@supabase/supabase-js": "^2.90.1",
-    "leaflet": "^1.9.4",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/leaflet": "^1.9.21",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
