--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@googlemaps/js-api-loader": "^2.0.2",
     "@supabase/supabase-js": "^2.90.1",
     "@vis.gl/react-google-maps": "^1.7.1",
+    "chart.js": "^4.5.1",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.7.0"
